fixed spacing

--- a/css/misinfostyle.css
+++ b/css/misinfostyle.css
@@ -53,19 +53,19 @@ body, html {
 
 h1 {
   font-weight: normal;
-  font-size: 64px;
+  font-size: 4rem;
   text-align: center;
 }
 
 h2 {
   font-weight: normal;
-  font-size: 48px;
+  font-size: 3rem;
   text-align: center;
 
 }
 
 h3 {
-  font-size: 32px;
+  font-size: 3rem;
 }
 
 h4 {
@@ -77,7 +77,7 @@ h4 {
 }
 
 .cardContainer {
-  padding: 0 150px 0 150px;
+  padding: 0 10rem 0 10rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -93,6 +93,7 @@ h4 {
   background: rgb(129,175,176);
   background: linear-gradient(0deg, rgba(129,175,176,1) 0%, rgba(254,249,238,1) 100%);
   border-radius: 7px;
+  margin-right: 2rem;
 }
 
 .cardright{
@@ -105,6 +106,7 @@ h4 {
   background: rgb(129,175,176);
   background: linear-gradient(0deg, rgba(129,175,176,1) 0%, rgba(254,249,238,1) 100%);
   border-radius: 7px;
+  margin-left: 2rem;
 }
 
 
